--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -406,9 +406,9 @@
     <string name="notifications_new_post_title">Новый пост | %s</string>
     <string name="notifications_new_tariff_title">Встречайте новый тариф - %s</string>
     <string name="notifications_new_tariff_body">Возможно, он подойдет именно Вам?</string>
-    <string name="notifications_new_announcement_title">Внимание! Появилось важное объявление!</string>
+    <string name="notifications_new_announcement_title">Внимание! Появилось важное объявление</string>
     <string name="notifications_new_announcement_body">%s\nПодробности в разделе объявлений</string>
-    <string name="notifications_new_service_post_title">Появилась новая служебная запись!</string>
+    <string name="notifications_new_service_post_title">Появилась новая служебная запись</string>
     <string name="notifications_new_service_post_title_with_arg">Появилась новая служебная запись | %s</string>
     <string name="notifications_new_message_title">Новое сообщение | %s</string>
 </resources>
