--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -241,6 +241,9 @@
     <string name="personal_account_action_manage_connected_services">Open services screen</string>
     <string name="personal_account_action_manage_connected_services_description">Manage additional services</string>
 
+    <!-- TRANSACTIONS SCREEN -->
+    <string name="transactions_screen_name">Balance history</string>
+
     <!-- SERVICES SCREEN -->
     <string name="services_screen_name">Additional services</string>
     <string name="services_screen_all_services_sector_title">All services</string>
@@ -258,7 +261,6 @@
     <string name="services_screen_details_payment_policy_pending_description">Payment at the end of the billing month</string>
     <string name="services_screen_details_connect_button_text">Connect additional service</string>
     <string name="services_screen_details_disconnect_button_text">Disconnect additional service</string>
-
 
     <!-- SETTINGS SCREEN -->
     <string name="settings_screen_name">Settings</string>
